fundamentals of js added

--- a/src/app/courses/javascript/lesssion/code-structure/code-structure.component.html
+++ b/src/app/courses/javascript/lesssion/code-structure/code-structure.component.html
@@ -1,1 +1,106 @@
-<p>code-structure works!</p>
+<div>
+    <p class="paragraph-description" id="structure_of_code_in_JavaScript">The structure of code in JavaScript plays a pivotal role in determining its readability, maintainability, and scalability. As developers craft solutions to various problems, adhering to best practices in code structuring becomes paramount. This brief note aims to delve into the fundamentals of code structure in JavaScript, exploring concepts such as statements, whitespace, and comments, and elucidating their significance through simple explanations and concise code examples.</p>
+    <h2 class="content-sub-heading">1. Importance of Code Structure:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Effective code structure enhances code readability, making it easier for developers to understand and maintain.</li>
+            <li>Well-structured code promotes collaboration among team members, as it facilitates code reviews and debugging processes.</li>
+            <li>Consistent code structure across projects fosters code reusability and scalability, contributing to the long-term sustainability of software systems.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Overview_of_JavaScript_Code_Structure">2.Overview of JavaScript Code Structure:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>JavaScript code consists of statements, which are instructions that the interpreter can execute.</li>
+            <li>Statements are composed of expressions, variables, functions, and other constructs that perform specific tasks.</li>
+            <li>Proper indentation, whitespace, and comments are essential components of code structure, aiding in code organization and clarity.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Statements">3.Statements:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>In JavaScript, a statement is a command that performs an action or declares a variable.</li>
+            <li>Common types of statements include variable declarations, control flow statements (e.g., if-else statements, loops), and function declarations.</li>
+            <li>Each statement typically ends with a semicolon (;), although JavaScript allows for optional semicolons in certain contexts due to automatic semicolon insertion (ASI).
+                <br>
+                <prismcode [code]="code" language="javascript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Whitespace">4. Whitespace:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Whitespace refers to spaces, tabs, and line breaks within the code.</li>
+            <li>While JavaScript ignores whitespace during execution, it plays a crucial role in enhancing code readability.</li>
+            <li>Consistent indentation helps delineate code blocks and improves visual clarity.</li>
+            <li>Excessive whitespace should be avoided to prevent code clutter and maintain a clean coding style.
+                <br>
+                <prismcode [code]="code1" language="javascript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Comments">5. Comments:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Comments are annotations within the code that provide additional context, explanations, or reminders to developers.</li>
+            <li>JavaScript supports two types of comments: single-line comments and multi-line comments.</li>
+            <li>Single-line comments begin with //, while multi-line comments are enclosed within /* and */.
+                <br>
+                <prismcode [code]="code2" language="javascript"></prismcode>
+            </li>
+            <li>
+                <h2 class="bullet-1">
+                    Semicolons:
+                <br>
+                    <ul class="dot-li">
+                     <li>In JavaScript, semicolons are used to terminate statements.</li>
+                     <li>While JavaScript allows for automatic semicolon insertion (ASI) in certain cases, it's considered a best practice to include semicolons explicitly to avoid ambiguity and potential errors.</li>
+                     <li>Although ASI can automatically insert semicolons, it's not foolproof and may lead to unexpected behavior, especially when minifying code or working with complex expressions.
+                        <br>
+                        <prismcode [code]="code3" language="javascript"></prismcode>
+                     </li>
+                     <li>By consistently using semicolons to terminate statements, developers mitigate the risk of syntax errors and improve code clarity.</li>
+                 </ul>
+                 </h2> 
+                 <h2 class="bullet-1">
+                    Nested Comments are not supported!:
+                <br>
+                    <ul class="dot-li">
+                     <li>Unlike some programming languages, JavaScript does not support nested comments.</li>
+                     <li>Attempting to nest comments within one another will result in a syntax error.
+                        <br>
+                        <prismcode [code]="code4" language="javascript"></prismcode>
+                     </li>
+                     <li>Developers should avoid attempting to nest comments and instead use single-line or multi-line comments as appropriate to provide context and explanations within their code.</li>
+                 </ul>
+                 </h2> 
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Best_Practices_for_Code_Structure">6. Best Practices for Code Structure:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Consistently apply indentation and whitespace to improve code readability.</li>
+            <li>Use descriptive variable and function names to enhance code clarity.</li>
+            <li>Employ comments judiciously to document complex logic, edge cases, and API usage.</li>
+            <li>Follow a consistent coding style guide or conventions adopted by the development team or community.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Conclusion_Code_Structure">7. Conclusion:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Understanding and implementing sound code structure practices is essential for writing maintainable and scalable JavaScript code.</li>
+            <li>By mastering concepts such as statements, whitespace, and comments, developers can craft code that is not only functional but also comprehensible to others.</li>
+            <li>Embracing best practices in code structuring fosters collaboration, accelerates development cycles, and contributes to the overall quality of software solutions.</li>
+            <li>In summary, code structure serves as the foundation upon which robust and maintainable JavaScript applications are built. By adhering to principles of clarity, consistency, and documentation, developers empower themselves and their teams to navigate complex codebases with confidence and agility.</li>
+        </ul>
+    </h2>
+
+
+</div>
