--- a/src/app/courses/javascript/lesssion/fundamentals/fundamentals.component.html
+++ b/src/app/courses/javascript/lesssion/fundamentals/fundamentals.component.html
@@ -1,1 +1,90 @@
-<p>fundamentals works!</p>
+<div>
+    <p class="paragraph-description" id="JavaScript_fundamentals">JavaScript stands as a cornerstone in modern web development, empowering developers to create dynamic and interactive web applications. Understanding its fundamentals is crucial for mastering the language and building robust solutions. This comprehensive note aims to delve into the core concepts and principles of JavaScript, providing simple explanations and concise code snippet examples to facilitate learning.</p>
+
+    <h2 class="content-sub-heading">1. Introduction to JavaScript:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>JavaScript is a high-level, interpreted programming language primarily used for enhancing the interactivity of web pages.</li>
+            <li>It is supported by all modern web browsers and can be utilized both on the client-side and server-side.</li>
+            <li>JavaScript facilitates various tasks, including DOM manipulation, event handling, and asynchronous programming.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Variables_and_Data_TypesJavaScript_fundamentals">2. Variables and Data Types:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Variables are containers for storing data values.</li>
+            <li>In JavaScript, variables are declared using the var, let, or const keywords.</li>
+            <li>JavaScript supports various data types, including numbers, strings, booleans, arrays, objects, and more.
+                <br>
+                <prismcode [code]="code" language="JavaScript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Operators_JavaScript_fundamentals">3. Operators:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Operators are symbols that perform operations on operands.</li>
+            <li>JavaScript supports arithmetic, assignment, comparison, logical, and bitwise operators.
+                <br>
+                <prismcode [code]="code1" language="JavaScript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Control_Flow_JavaScript_fundamentals">4. Control Flow:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Control flow statements determine the execution flow of a program.</li>
+            <li>JavaScript supports conditional statements (if-else), loops (for, while, do-while), and branching statements (break, continue).
+                <br>
+                <prismcode [code]="code2" language="JavaScript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Functions_JavaScript_fundamentals">5. Functions:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Functions are reusable blocks of code that perform specific tasks.</li>
+            <li>In JavaScript, functions can be declared using the function keyword or as arrow functions.
+                <br>
+                <prismcode [code]="code3" language="JavaScript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Events_and_Event_Handling_JavaScript_fundamentals">6. Events and Event Handling:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Events are actions or occurrences that happen in the browser.</li>
+            <li>JavaScript enables event handling through event listeners, allowing developers to respond to user interactions such as clicks, key presses, and mouse movements.
+                <br>
+                <prismcode [code]="code4" language="html"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Asynchronous_JavaScript_JavaScript_fundamentals">7. Asynchronous JavaScript:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>Asynchronous programming in JavaScript involves executing tasks concurrently without blocking the main execution thread.</li>
+            <li>Promises, async/await, and callback functions are common techniques used for asynchronous programming.
+                <br>
+                <prismcode [code]="code5" language="JavaScript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+
+    <h2 class="content-sub-heading" id="Conclusion_JavaScript_fundamentals">Conclusion:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>JavaScript fundamentals form the building blocks of web development, empowering developers to create dynamic and interactive applications.</li>
+            <li>By mastering variables, operators, control flow, functions, events, and asynchronous programming, developers can leverage the full potential of JavaScript to build robust and scalable solutions.</li>
+            <li>In summary, delving into the fundamentals of JavaScript lays the groundwork for mastering the language and embarking on a journey of web development proficiency. With a solid understanding of these core concepts and principles, developers can confidently navigate the complexities of JavaScript and create innovative and engaging web applications.</li>
+        </ul>
+    </h2>
+
+</div>
