--- a/src/app/courses/javascript/lesssion/hello-world/hello-world.component.html
+++ b/src/app/courses/javascript/lesssion/hello-world/hello-world.component.html
@@ -1,1 +1,160 @@
-<p>hello-world works!</p>
+<div>
+    <p class="paragraph-description" id="Hello_World">"Hello, World!" stands as the quintessential starting point for individuals diving into the realm of programming. This ritualistic initiation holds particular significance in JavaScript, a language deeply entrenched in the fabric of modern web development. This comprehensive note aims to meticulously dissect the nuances of "Hello, World!" in JavaScript, from its historical context to its practical implementation, offering detailed explanations and accompanying code snippets along the way.</p>
+
+    <h2 class="content-sub-heading" id="Historical_Significance">1. The Historical Significance of "Hello, World!":</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>"Hello, World!" has a storied history in the realm of computer programming.</li>
+            <li>Its origins trace back to the seminal work of Brian Kernighan, who included it in the documentation for the B programming language in 1972.</li>
+            <li>Since then, "Hello, World!" has become a universal convention, adopted across a myriad of programming languages as the inaugural program written by beginners.</li>
+            <li>In JavaScript, "Hello, World!" serves as the gateway to understanding the language's syntax, structure, and execution.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading">2. An Overview of JavaScript:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>JavaScript emerged in the mid-1990s as a lightweight, interpreted programming language primarily used for enhancing the interactivity of web pages.</li>
+            <li>Initially confined to client-side scripting within web browsers, JavaScript has evolved to encompass server-side development through platforms like Node.js.</li>
+            <li>Its versatility and ubiquity make it a cornerstone of modern web development, facilitating dynamic user experiences and responsive web applications.</li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Delving_into_Hello_World">3. Delving into "Hello, World!" in JavaScript:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>The quintessential "Hello, World!" program in JavaScript is a simple yet profound introduction to the language's core concepts.</li>
+            <li>To explore its intricacies, let's dissect a concise code snippet:
+                <br>
+                <prismcode [code]="code" language="javascript"></prismcode>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Code_Structure">4. Understanding the Code Structure:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>The console.log() function is a built-in feature of JavaScript used for printing data to the console.</li>
+            <li>Within the parentheses of console.log(), a string literal "Hello, World!" is passed as an argument, denoting the text to be displayed.</li>
+            <li>When executed, the program will output the string "Hello, World!" to the console.</li>
+        </ul>
+        <h2 class="bullet-1">
+           4.1 The “script” tag:
+           <ul class="dot-li">
+            <li>In HTML, the &lt;script&gt; tag is used to embed or reference JavaScript code within a web page.</li>
+            <li>It can be placed in the &lt;head&gt; or &lt;body&gt; section of an HTML document.</li>
+            <li>The syntax for using the &lt;script&gt; tag is as follows:
+                <br>
+                <prismcode [code]="code1" language="html"></prismcode>
+            </li>
+            <li>Alternatively, you can reference an external JavaScript file using the src attribute:
+                <br>
+                <prismcode [code]="code2" language="html"></prismcode>
+            </li>
+            <li>The &lt;script&gt; tag can also include the type attribute to specify the MIME type of the script being referenced.</li>
+        </ul>
+        </h2>
+
+        <h2 class="bullet-1">
+            4.2 Modern Markup:
+            <ul class="dot-li">
+             <li>Modern web development practices often advocate for separating HTML, CSS, and JavaScript code into distinct files.</li>
+             <li>This approach, known as "separation of concerns," enhances code maintainability, scalability, and reusability.</li>
+             <li>By utilizing external JavaScript files referenced through the &lt;script&gt; tag, developers can streamline the structure of their HTML documents.</li>
+         </ul>
+         </h2>
+
+         <h2 class="bullet-1">
+            4.3  External Scripts:
+            <ul class="dot-li">
+             <li>External scripts are JavaScript files hosted on a remote server or stored locally within a project directory.</li>
+             <li>They can be referenced in HTML documents using the &lt;script&gt; tag's src attribute.</li>
+             <li>External scripts offer several advantages, including code modularity, improved caching, and easier collaboration among developers.</li>
+             <li>To include an external script in an HTML document:
+                 <br>
+                 <prismcode [code]="code2" language="html"></prismcode>
+             </li>
+             <li>The &lt;script&gt; tag can also include the type attribute to specify the MIME type of the script being referenced.</li>
+         </ul>
+         </h2>
+
+         <h2 class="bullet-1">
+            4.4 If src is set, the script content is ignored:
+            <ul class="dot-li">
+             <li>When the src attribute is set in the &lt;script&gt; tag, the content enclosed within the opening and closing &lt;script&gt; tags is ignored.</li>
+             <li>Instead, the browser fetches and executes the JavaScript code from the external file specified in the src attribute.</li>
+             <li>This behavior allows developers to separate inline script code from external script files, promoting code organization and maintainability.</li>
+             <li>It's essential to note that if both the src attribute and inline script content are present, the inline script content will be disregarded.</li>
+             <li>To further illustrate these points, let's provide additional explanations and code examples:
+                 <br>
+                 <prismcode [code]="code3" language="html"></prismcode>
+             </li>
+             <h2 class="bullet-1">In this HTML document:
+             </h2>
+             <li>The &lt;script src="script.js"&gt;&lt;/script&gt; tag references an external JavaScript file named script.js.</li>
+             <li>The content within the &lt;script&gt; tags in the &lt;head&gt; section is ignored since the src attribute is set.</li>
+             <li>Inline JavaScript code within the &lt;script&gt; tags in the &lt;body&gt; section will still be executed.
+                This separation of concerns improves code organization and enhances maintainability.</li>
+         </ul>
+         </h2>
+    </h2>
+
+    <h2 class="content-sub-heading" id="Explanation_of_Key_Concepts">5. Explanation of Key Concepts:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>
+                <h2 class="bullet-1">
+                    console.log():
+                <br>
+                    <ul class="dot-li">
+                     <li>The console.log() function is part of the Console API provided by web browsers and Node.js.</li>
+                     <li>It allows developers to log messages, variables, and other data to the console for debugging and informational purposes.</li>
+                     <li>This method serves as a foundational tool for developers to inspect the behavior of their code during runtime.</li>
+                 </ul>
+                 </h2> </li><li>
+                 <h2 class="bullet-1">
+                    String Literal:
+                <br>
+                    <ul class="dot-li">
+                     <li>In JavaScript, a string literal is a sequence of characters enclosed within single (') or double (") quotation marks.</li>
+                     <li>String literals can contain alphanumeric characters, symbols, and whitespace, allowing developers to represent textual data within their programs.</li>
+                     <li>In the "Hello, World!" example, "Hello, World!" is a string literal encapsulating the greeting message.</li>
+                 </ul>
+                 </h2>
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading">6. Execution of the Program:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>
+                <h2 class="bullet-1">
+                    To execute the "Hello, World!" program, follow these steps:
+                <br>
+                    <ul class="dot-li">
+                     <li>Open a text editor such as Visual Studio Code, Sublime Text, or Notepad++.</li>
+                     <li>Create a new file and save it with a .js extension, e.g., hello.js.</li>
+                     <li>Write the provided code snippet into the file.</li>
+                     <li>Save the file.</li>
+                     <li>Open a terminal or command prompt</li>
+                     <li>Navigate to the directory where the file is saved using the cd command.</li>
+                     <li>Type node hello.js and press Enter.</li>
+                     <li>You should see the output "Hello, World!" printed in the console.</li>
+                 </ul>
+                 </h2> 
+            </li>
+        </ul>
+    </h2>
+
+    <h2 class="content-sub-heading" id="hello_world_Conclusion">Conclusion:</h2>
+    <h2 class="bullet-1">
+        <ul class="dot-li">
+            <li>"Hello, World!" in JavaScript serves as an indispensable introductory milestone for budding programmers.</li>
+            <li>Its symbolic significance transcends mere tradition, offering novices a tangible entry point into the world of coding.</li>
+            <li>By unraveling the nuances of "Hello, World!"—from its historical roots to its practical implementation—individuals embarking on their JavaScript journey lay a solid foundation for future exploration and mastery of the language.</li>
+            <li>In conclusion, "Hello, World!" in JavaScript embodies a profound intersection of tradition, symbolism, and practicality. Through meticulous analysis of its historical context, code structure, and execution, newcomers to programming gain invaluable insights into the foundational principles of JavaScript development. As they embark on their journey of discovery, armed with a newfound understanding of "Hello, World!", aspiring developers set sail towards the boundless horizons of JavaScript proficiency.</li>
+        </ul>
+    </h2>
+
+</div>
