variable content added

--- a/src/app/courses/javascript/lesssion/variables/variables.component.scss
+++ b/src/app/courses/javascript/lesssion/variables/variables.component.scss
@@ -11,6 +11,7 @@ table {
         color: #000000;
         font-size: 14px;
         font-weight: 500;
+        word-break: break-word;
     }
 
     th {
