--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,12 @@ body {
     margin: 0px !important;
 }
 
+.content-sub-heading1 {
+    color: #000000;
+    margin: 0px !important;
+    font-weight: 600 !important;
+}
+
 .sub-paragraph-description {
     color: #000000;
     font-size: 14px;
