--- a/src/app/courses/javascript/lesssion/interview/interview.component.html
+++ b/src/app/courses/javascript/lesssion/interview/interview.component.html
@@ -2224,6 +2224,18 @@
                         <prismcode [code]="code148" language="javascript"></prismcode>
                     </li>
                 </ul>
+                <ul style="margin-left: 16px;">
+                    <li>
+                        <b>Reverse String</b>
+                        <prismcode [code]="code188" language="javascript"></prismcode>
+                    </li>
+                </ul>
+                <ul style="margin-left: 16px;">
+                    <li>
+                        <b>Palindrome Number</b>
+                        <prismcode [code]="code189" language="javascript"></prismcode>
+                    </li>
+                </ul>
             </li>
         </ol>
     </div>
