interview questions added

--- a/src/app/courses/angular/lesssion/inter-views/inter-views.component.html
+++ b/src/app/courses/angular/lesssion/inter-views/inter-views.component.html
@@ -458,6 +458,11 @@
             Impure pipes should be used sparingly, as they can potentially degrade the performance of your application
             by causing unnecessary recalculations.Example:</p>
         <prismcode [code]="code33" language="javascript"></prismcode>
+        <p><b>Uses:</b></p>
+        <p>app.module.ts:</p>
+        <prismcode [code]="code221" language="javascript"></prismcode>
+        <p>app.component.ts:</p>
+        <prismcode [code]="code222" language="javascript"></prismcode>
         <p>Some Other important Pipes:</p>
         <p>i. <b>Chained Pipe:</b>Chained pipes refer to the practice of chaining multiple pipes together in a single
             expression within your template. This allows you to apply multiple transformations to a value
